--- a/exam.css
+++ b/exam.css
@@ -1,7 +1,6 @@
 html {margin: 0; padding: 0; background-color: #FCEBB6; color: #221811;}
 
 header, nav, footer {text-align: center;}
-header, footer {background-color: #D2B48C;}
 main {background-color: #FEF6C2;}
 
 #wrapper
@@ -9,11 +8,14 @@ main {background-color: #FEF6C2;}
 	margin-left: auto;
 	margin-right: auto;
 	width: 90%;
+  background-color: #D2B48C;
 }
 
-nav {height: 100%; width: 20%; background-color: #221811;}
+nav ul{list-style-type: none;}
+
+nav {float: left; height: 100%; width: 20%; background-color: #221811;}
 
 
 img {width: 100%;}
 nav a {color: #FCEBB6; text-decoration: none; display: block;}
-#content {margin-left:25%;}
+#content {margin-left:20%;}
